# qtrf

./: .gitignore  README.md  pyproject.toml  qtcreator.pro  setup.py  update_ui
designer/: designer.pro  filewidget.ui
qtrf/: QtCore.py  QtGui.py  QtWidgets.py  helpers.py  units.py  version.py
qtrf/mixins/: __init__.py  float_line_edit.py  float_value.py  helpers.py  int_line_edit.py  int_value.py  line_edit.py  prefix_keys.py  shake.py  special_keys.py  value.py
qtrf/numeric_suffix/: __init__.py  helpers.py  numeric_suffix.py  prefixes.py
qtrf/shake/: __init__.py  animations_list.py  shake.py
qtrf/widgets/: __init__.py
qtrf/widgets/amps/: __init__.py  helpers.py  label.py  line_edit.py
qtrf/widgets/celsius/: label.py  line_edit.py
qtrf/widgets/db/: label.py  line_edit.py
qtrf/widgets/dbm/: label.py  line_edit.py
qtrf/widgets/file/: __init__.py  ui_file.py  ui_filewidget.py  widget.py
qtrf/widgets/float_value/: label.py  line_edit.py
qtrf/widgets/hz/: __init__.py  helpers.py  label.py  line_edit.py
qtrf/widgets/int_value/: label.py  line_edit.py
qtrf/widgets/ip_address/: helpers.py  line_edit.py
qtrf/widgets/meters/: __init__.py  helpers.py  label.py  line_edit.py
qtrf/widgets/ohms/: __init__.py  helpers.py  label.py  line_edit.py
qtrf/widgets/points/: helpers.py  line_edit.py
qtrf/widgets/ports/: label.py  line_edit.py  ports.py
qtrf/widgets/seconds/: __init__.py  helpers.py  (+2 more)
scripts/: build  clean  install  install-dev  rebuild  reinstall  test  uninstall  update-ui  upload-version
test/: test_ports_entry.py  test_si_prefix.py
tests/: test_numeric_suffix.py  test_ports_entry.py  test_si_prefix.py
(+18 files in other folders)
