[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "qtrf"
authors = [{name  = "Nick Lalic", email = "nick.lalic@rsa.rohde-schwarz.com"}]
description     = "Widgets for RF inputs written in Qt for Python (PySide6)."
requires-python = ">=3.5"
keywords = [
  "Qt",
  "PySide",
  "PySide6",
  "RF ",
  "Rohde ",
  "Schwarz ",
  "Test ",
  "Measurement"
]
license      = { file = "LICENSE.txt" }
classifiers  = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.0",
  "Programming Language :: Python :: 3.1",
  "Programming Language :: Python :: 3.2",
  "Programming Language :: Python :: 3.3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
]
dependencies = [ "PySide6" ]
dynamic = [
  "readme",
  "version"
]


[project.scripts]
show-widget = "qtrf.bin.show_widget:main"


[project.urls]
"Homepage"    = "https://github.com/Terrabits/qtrf"
"Bug Tracker" = "https://github.com/Terrabits/qtrf/issues"


[project.optional-dependencies]
dev  = ["ddt", "twine", "wheel"]
test = ["ddt"]


[tool.setuptools.dynamic]
readme  = { file = ["README.md"] }
version = { attr = "qtrf.VERSION" }


[tool.setuptools.packages.find]
include    = [ "qtrf" ]
namespaces = false
